fix navbar width on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ html,
 body,
 * {
   box-sizing: border-box;
+  max-width: auto;
 }
 
 a {
@@ -27,7 +28,8 @@ h4 {
 
 .App-container {
   display: flex;
-  width: 70%;
+  max-width: 70%;
+  padding: 0 20px;
 }
 
 .App-circle-div {
@@ -47,7 +49,7 @@ div {
 }
 
 .summary-div {
-  width: 70%;
+  max-width: 70%;
 }
 
 .contact-div {
@@ -57,6 +59,7 @@ div {
 
 table {
   margin: auto;
+  display: flex;
 }
 
 td, th {
@@ -65,7 +68,7 @@ td, th {
 }
 
 .App-projects-img {
-  width: 70%;
+  max-width: 70%;
   display: flex;
   margin: auto;
   border-radius: 6px;
@@ -74,7 +77,6 @@ td, th {
 @media screen and (max-width: 700px) {
   body {
     font-size: 18px;
-    width: 100%;
   }
   .App-circle img {
     margin-top: 30%;
@@ -84,18 +86,20 @@ td, th {
   }
 }
 
+@media screen and (max-width: 400px) {
+  
+}
+
 /* Style the navbar */
 #navbar {
   overflow: hidden;
   background-color: whitesmoke;
   z-index: 500;
-  width: 100%;
 }
 
 /* Navbar links */
 #navbar a, span {
   float: left;
-  display: flex;
   color: #CB81C1;
   text-align: center;
   padding: 14px;
@@ -104,19 +108,9 @@ td, th {
   font-weight: 900;
 }
 
-/* Page content */
-.content {
-  padding: 16px;
-}
-
 /* The sticky class is added to the navbar with JS when it reaches its scroll position */
 .sticky {
   position: fixed;
-  top: 0;
+  box-shadow: 0 1px rgba(0, 0, 0, 0.1);
   width: 100%;
-}
-
-/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
-.sticky + .content {
-  padding-top: 60px;
 }
